# arx

./: .dockerignore  .gitignore  .prettierignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  flake.nix  package-lock.json  package.json
arx-core/: Cargo.toml
arx-core/src/: domain.rs  error.rs  lib.rs  list.rs  policy.rs  repo.rs  repo_factory.rs  repo_fs.rs  stats.rs
arx-core/src/chunking/: fastcdc.rs
arx-core/src/codec/: mod.rs  store.rs  zstdc.rs
arx-core/src/container/: chunktab.rs  delta.rs  diagram.md  journal.rs  manifest.rs  superblock.rs  tail.rs
arx-core/src/crud/: mod.rs
arx-core/src/crypto/: aead.rs  hex.rs  kdf.rs  nonce.rs
arx-core/src/index/: inmem.rs
arx-core/src/pack/: writer.rs
arx-core/src/read/: extract.rs  opened.rs  stats.rs  stream.rs
arx-core/src/util/: buf.rs  hash_forward.rs  sanitize.rs  varint.rs
arx-core/tests/: chunk_integrity.rs  crud_ops.rs  perturb.rs  round_trip.rs
arx-grpc/: Cargo.toml  build.rs  tenants.json.example
arx-grpc/proto/: arx.proto
arx-grpc/src/: arx_gen.rs  auth.rs  db.rs  main.rs  server.rs  store.rs  upload.rs  util.rs
arxdev/: Cargo.toml
arxdev/src/: main.rs
arxdev/src/application/: handlers.rs  mod.rs
arxdev/src/presentation/: cli.rs
arxdev/tests/: cli.rs
arxui/: .env.example  README.md  buf.gen.yaml  index.html  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.json  vite.config.ts  vitest.config.ts
arxui/app/: error.tsx  layout.tsx  providers.tsx
arxui/app/login/: page.tsx
arxui/app/vaults/: error.tsx  layout.tsx  page.tsx
arxui/app/vaults/[vaultId]/: error.tsx  page.tsx
arxui/components/arx/: app-shell.tsx  app-sidebar.tsx  arx-sidebar.tsx  auth-guard.tsx  auto-auth.tsx  clock-widget.tsx  create-vault-dialog.tsx  dashboard-layout.tsx  dashboard-page-layout.tsx  file-grid.tsx  file-preview-sheet.tsx  mobile-header.tsx  recent-activity-widget.tsx  setup-guard.tsx  storage-overview-widget.tsx  upload-queue.tsx  upload-zone.tsx  user-avatar.tsx  vault-card.tsx  vault-stats-strip.tsx
arxui/components/chat/: chat-contact.tsx  chat-conversation.tsx  chat-expanded.tsx  chat-header.tsx  chat-message.tsx  chat-preview.tsx  chat-status-indicator.tsx  mobile-chat.tsx  use-chat-state.ts
arxui/components/dashboard/card/: index.tsx
arxui/components/dashboard/chart/: index.tsx
arxui/components/dashboard/mobile-header/: index.tsx
arxui/components/dashboard/notifications/: index.tsx  mobile-notifications.tsx  notification-item.tsx
arxui/components/dashboard/rebels-ranking/: index.tsx
arxui/components/dashboard/security-status/: index.tsx
arxui/components/dashboard/sidebar/: index.tsx
arxui/components/dashboard/stat/: index.tsx
arxui/components/dashboard/widget/: index.tsx
arxui/components/icons/: layout.tsx
arxui/components/ui/: badge.tsx  bullet.tsx  button.tsx  card.tsx  chart.tsx  context-menu.tsx  sheet.tsx  sidebar.tsx  tabs.tsx  tv-noise.tsx
arxui/scripts/: copy-sidecar.mjs
arxui/src/: App.tsx
arxui/src-tauri/: Cargo.toml  tauri.conf.json
arxui/src-tauri/capabilities/: default.json
arxui/src-tauri/src/: lib.rs  main.rs
arxui/src/lib/: sdk-context.tsx
arxui/src/routes/: login.tsx  setup.tsx  vault-detail.tsx  vaults.tsx
arxui/src/sdk/: admin-service.ts  auth-service.ts  file-service.ts  index.ts  token-store.ts  transport.ts  vault-service.ts
arxui/src/stores/: auth-store.ts  file-selection-store.test.ts  file-selection-store.ts  upload-store.test.ts  upload-store.ts
arxui/styles/: globals.css
scripts/: entrypoint.sh  gen_test_files.py  seed.py
