[package]
name = "arx-core"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.2"
ciborium = "0.2.2"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.21.0"
thiserror = "2.0.16"
time = { version = "0.3.43", features = ["macros"] }
walkdir = "2.5.0"
zstd = { version = "0.13.3", features = ["zstdmt"] }
