[package]
name = "arx-core"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.2"
chacha20poly1305 = "0.10.1"
ciborium = "0.2.2"
hex = "0.4.3"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11.2"
tempfile = "3.21.0"
thiserror = "2.0.16"
time = { version = "0.3.43", features = ["macros"] }
walkdir = "2.5.0"
zstd = { version = "0.13.3", features = ["zstdmt"] }
