[package]
name = "arx-grpc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "arx-grpc"
path = "src/main.rs"

[dependencies]
arx-core = { path = "../arx-core" }
tonic           = "0.12"
prost           = "0.13"
tokio           = { version = "1", features = ["full"] }
tokio-stream    = "0.1"
futures-core    = "0.3"
uuid            = { version = "1", features = ["v4"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
tower           = "0.4"
tempfile        = "3"
http            = "1"

[build-dependencies]
tonic-build = "0.12"
