[package]
name = "arx-grpc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "arx-grpc"
path = "src/main.rs"

[dependencies]
arx-core = { path = "../arx-core" }
tonic = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-core = "0.3"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tempfile = "3"
http = "1"
libsql = "0.9.30"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
sha2 = "0.11.0"
argon2 = "0.5.3"
tonic-web = "0.14.5"
tonic-prost = "0.14.5"
tower-http = { version = "0.6.8", features = ["cors"] }
axum = { version = "0.8", features = ["multipart"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.14"
